user role management apis - assign_role, remove_role, update_username apis
